# device_camera_openni2

./: CMakeLists.txt
cmake/: FindOpenNI2.cmake
config/: openni2framegrabber
doc/utql/Sensor/: OpenNI2FrameGrabber.xml
src/OpenNI2FrameGrabber/: OpenNI2FrameGrabber.cpp  OpenNI2FrameGrabber.h  SConscript
